deploy: 22473cb120354ccefa010389fb4c6e80b6df2ac5

--- a/genindex.html
+++ b/genindex.html
@@ -27,7 +27,7 @@
             <a href="index.html" class="icon icon-home"> PyTorch Gradient Metrics
           </a>
               <div class="version">
-                0.1.6
+                0.1.7
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -95,9 +95,11 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric.data">data (gradient_metrics.metrics.GradientMetric property)</a>
+      <li><a href="documentation.html#gradient_metrics.GradientMetricCollector.data">data (gradient_metrics.GradientMetricCollector property)</a>
 
       <ul>
+        <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric.data">(gradient_metrics.metrics.GradientMetric property)</a>
+</li>
         <li><a href="documentation.html#gradient_metrics.metrics.Max.data">(gradient_metrics.metrics.Max property)</a>
 </li>
         <li><a href="documentation.html#gradient_metrics.metrics.Mean.data">(gradient_metrics.metrics.Mean property)</a>
@@ -119,12 +121,10 @@
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="documentation.html#gradient_metrics.GradientMetricCollector.get_metrics">get_metrics() (gradient_metrics.GradientMetricCollector method)</a>
+      <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric">GradientMetric (class in gradient_metrics.metrics)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric">GradientMetric (class in gradient_metrics.metrics)</a>
-</li>
       <li><a href="documentation.html#gradient_metrics.GradientMetricCollector">GradientMetricCollector (class in gradient_metrics)</a>
 </li>
   </ul></td>
