--- a/genindex.html
+++ b/genindex.html
@@ -27,7 +27,7 @@
             <a href="index.html" class="icon icon-home"> PyTorch Gradient Metrics
           </a>
               <div class="version">
-                0.1.7
+                0.1.8
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -76,6 +76,7 @@
  | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
+ | <a href="#Z"><strong>Z</strong></a>
  
 </div>
 <h2 id="_">_</h2>
@@ -173,6 +174,14 @@
         <li><a href="documentation.html#gradient_metrics.metrics.PNorm.reset">(gradient_metrics.metrics.PNorm method)</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="Z">Z</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="documentation.html#gradient_metrics.GradientMetricCollector.zero_grad">zero_grad() (gradient_metrics.GradientMetricCollector method)</a>
+</li>
   </ul></td>
 </tr></table>
 
