deploy: 9d91e34fd2505fb1333119c25bc24ee1f4fde54b

--- a/genindex.html
+++ b/genindex.html
@@ -82,8 +82,12 @@
 <h2 id="_">_</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric.__call__">__call__() (gradient_metrics.metrics.GradientMetric method)</a>
+      <li><a href="documentation.html#gradient_metrics.GradientMetricCollector.__call__">__call__() (gradient_metrics.GradientMetricCollector method)</a>
+
+      <ul>
+        <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric.__call__">(gradient_metrics.metrics.GradientMetric method)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric._collect">_collect() (gradient_metrics.metrics.GradientMetric method)</a>
