deploy: 3cf16e23b1800d9243f3f0eeed954bb369174d72

--- a/genindex.html
+++ b/genindex.html
@@ -27,7 +27,7 @@
             <a href="index.html" class="icon icon-home"> PyTorch Gradient Metrics
           </a>
               <div class="version">
-                0.1.8
+                0.2.0
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -93,6 +93,8 @@
       <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric._collect">_collect() (gradient_metrics.metrics.GradientMetric method)</a>
 </li>
       <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric._get_metric">_get_metric() (gradient_metrics.metrics.GradientMetric method)</a>
+</li>
+      <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric._register">_register() (gradient_metrics.metrics.GradientMetric method)</a>
 </li>
   </ul></td>
 </tr></table>
