deploy: 669901402f2b4d5ded8374cd558936d5853353ef

--- a/genindex.html
+++ b/genindex.html
@@ -24,14 +24,18 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side">
       <div class="wy-side-scroll">
         <div class="wy-side-nav-search" >
-            <a href="index.html" class="icon icon-home"> PyTorch Gradient Metrics
+
+          
+          
+          <a href="index.html" class="icon icon-home">
+            PyTorch Gradient Metrics
           </a>
               <div class="version">
-                0.2.0
+                0.3.0
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
-    <input type="text" name="q" placeholder="Search docs" />
+    <input type="text" name="q" placeholder="Search docs" aria-label="Search docs" />
     <input type="hidden" name="check_keywords" value="yes" />
     <input type="hidden" name="area" value="default" />
   </form>
@@ -56,8 +60,8 @@
         <div class="rst-content">
           <div role="navigation" aria-label="Page navigation">
   <ul class="wy-breadcrumbs">
-      <li><a href="index.html" class="icon icon-home"></a> &raquo;</li>
-      <li>Index</li>
+      <li><a href="index.html" class="icon icon-home" aria-label="Home"></a></li>
+      <li class="breadcrumb-item active">Index</li>
       <li class="wy-breadcrumbs-aside">
       </li>
   </ul>
@@ -76,7 +80,6 @@
  | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
- | <a href="#Z"><strong>Z</strong></a>
  
 </div>
 <h2 id="_">_</h2>
@@ -94,7 +97,7 @@
 </li>
       <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric._get_metric">_get_metric() (gradient_metrics.metrics.GradientMetric method)</a>
 </li>
-      <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric._register">_register() (gradient_metrics.metrics.GradientMetric method)</a>
+      <li><a href="documentation.html#gradient_metrics.metrics.GradientMetric._register_parameters">_register_parameters() (gradient_metrics.metrics.GradientMetric method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -180,14 +183,6 @@
         <li><a href="documentation.html#gradient_metrics.metrics.PNorm.reset">(gradient_metrics.metrics.PNorm method)</a>
 </li>
       </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="Z">Z</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="documentation.html#gradient_metrics.GradientMetricCollector.zero_grad">zero_grad() (gradient_metrics.GradientMetricCollector method)</a>
-</li>
   </ul></td>
 </tr></table>
 
